// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfo renders component correctly 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <div
      class="ms-3"
    >
      <div
        class="contact-title card-title h5"
      >
        John
         
        Doe
      </div>
      <p
        class="contact-email card-text"
      >
        john.doe@example.com
      </p>
    </div>
  </div>
</div>
`;

exports[`UserInfo renders user info with avatar 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <img
      alt="avatar"
      src="https://example.com/avatar.jpg"
    />
    <div
      class="ms-3"
    >
      <div
        class="contact-title card-title h5"
      >
        John
         
        Doe
      </div>
      <p
        class="contact-email card-text"
      >
        john.doe@example.com
      </p>
    </div>
  </div>
</div>
`;

exports[`UserInfo renders user info with default avatar 1`] = `
<div>
  <div
    class="d-flex align-items-center"
  >
    <svg
      data-testid="default-avatar-icon"
    />
    <div
      class="ms-3"
    >
      <div
        class="contact-title card-title h5"
      >
        John
         
        Doe
      </div>
      <p
        class="contact-email card-text"
      >
        john.doe@example.com
      </p>
    </div>
  </div>
</div>
`;
